Added selection of SD preference. Using SD stored in the preference. Minor refactor and cleanup.